--- a/trab_conosco.html
+++ b/trab_conosco.html
@@ -84,8 +84,53 @@
         </iframe>
     </main>
     <footer>
-        <div class="div-onda">
-           
+        <div class="conteiner__footer__onda">
+            <div class="div-onda">
+                <img src="image/mcdonalds-logo-bg-red.png" alt="mcdonalds-logo-bg-red.png">
+                <div id="menssage__info">
+                    <h2>Já baixou o nosso App?</h2>
+                    <p>Peça seu delivery, veja o menu, baixe stickers, peça e retire,
+                         encontre os restaurantes mais próximos, tenha todos os cupons e muito mais.</p>
+                </div>
+                <button>Baixe agora</button>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffcc00" fill-opacity="1" d="M0,64L24,64C48,64,96,64,144,85.3C192,107,240,149,288,165.3C336,181,384,171,432,160C480,149,528,139,576,128C624,117,672,107,720,90.7C768,75,816,53,864,58.7C912,64,960,96,1008,106.7C1056,117,1104,107,1152,90.7C1200,75,1248,53,1296,58.7C1344,64,1392,96,1416,112L1440,128L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,
+                0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path></svg>
+        </div>
+        <div id="footer__links">
+            <ul class="links">
+                <li class="title__ul">Quem somos</li>
+                <li>Institucional</li>
+                <li>Franquias</li>
+                <li>Trabalhe conosco</li>
+                <li>Privacidade</li>
+                <li>Desenvolvimento sustentavel e compromisso social</li>
+                <li>Portas abertas</li>
+                <li>Publicidade</li>
+            </ul>
+            <ul class="links">
+                <li class="title__ul">Familia</li>
+                <li>Lançamentos</li>
+                <li>Mclaches Feliz</li>
+                <li>Mequi Box</li>
+                <li>Compromisso com as familias</li>
+            </ul>
+            <ul class="links">
+                <li class="title__ul">Mequi para voce</li>
+                <li>App do Mequili</li>
+                <li>McDelivery</li>
+                <li>Mequi no Ifood</li>
+                <li>Peca e retire</li>
+                <li>Gift Card</li>
+                <li>Mequi Zap</li>
+                <li>Drive Thru</li>
+                <li>Use Mequi</li>
+            </ul>
+            <ul class="links">
+                <li class="title__ul">Contatos</li>
+                <li>Contato</li>
+            </ul>
+            
         </div>
     </footer>
 
