--- a/index.html
+++ b/index.html
@@ -44,5 +44,77 @@
             </div>
         </div>
     </header>
+    <footer>
+        <div class="conteiner__footer__onda">
+            <div class="div-onda">
+                <img src="image/mcdonalds-logo-bg-red.png" alt="mcdonalds-logo-bg-red.png">
+                <div id="menssage__info">
+                    <h2>Já baixou o nosso App?</h2>
+                    <p>Peça seu delivery, veja o menu, baixe stickers, peça e retire,
+                         encontre os restaurantes mais próximos, tenha todos os cupons e muito mais.</p>
+                </div>
+                <button>Baixe agora</button>
+            </div>
+            <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 100" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(255, 179, 11, 1)" offset="0%"></stop><stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,90L10,81.7C20,73,40,57,60,45C80,33,100,27,120,26.7C140,27,160,33,180,43.3C200,53,220,67,240,60C260,53,280,27,300,13.3C320,0,340,0,360,8.3C380,17,400,33,420,46.7C440,60,460,70,480,63.3C500,57,520,33,540,21.7C560,10,580,10,600,15C620,20,640,30,660,41.7C680,53,700,67,720,66.7C740,67,760,53,780,53.3C800,53,820,67,840,75C860,83,880,87,900,88.3C920,90,940,90,960,86.7C980,83,1000,77,1020,65C1040,53,1060,37,1080,30C1100,23,1120,27,1140,38.3C1160,50,1180,70,1200,71.7C1220,73,1240,57,1260,43.3C1280,30,1300,20,1320,20C1340,20,1360,30,1380,36.7C1400,43,1420,47,1430,48.3L1440,50L1440,100L1430,100C1420,100,1400,100,1380,100C1360,100,1340,100,1320,100C1300,100,1280,100,1260,100C1240,100,1220,100,1200,100C1180,100,1160,100,1140,100C1120,100,1100,100,1080,100C1060,100,1040,100,1020,100C1000,100,980,100,960,100C940,100,920,100,900,100C880,100,860,100,840,100C820,100,800,100,780,100C760,100,740,100,720,100C700,100,680,100,660,100C640,100,620,100,600,100C580,100,560,100,540,100C520,100,500,100,480,100C460,100,440,100,420,100C400,100,380,100,360,100C340,100,320,100,300,100C280,
+                100,260,100,240,100C220,100,200,100,180,100C160,100,140,100,120,100C100,100,80,100,60,100C40,100,20,100,10,100L0,100Z"></path></svg>
+            
+        </div>
+        <div id="footer__links">
+            <ul class="links">
+                <li class="title__ul">Quem somos</li>
+                <li>Institucional</li>
+                <li>Franquias</li>
+                <li>Trabalhe conosco</li>
+                <li>Privacidade</li>
+                <li>Desenvolvimento sustentavel e compromisso social</li>
+                <li>Portas abertas</li>
+                <li>Publicidade</li>
+            </ul>
+            <ul class="links">
+                <li class="title__ul">Familia</li>
+                <li>Lançamentos</li>
+                <li>Mclaches Feliz</li>
+                <li>Mequi Box</li>
+                <li>Compromisso com as familias</li>
+            </ul>
+            <ul class="links">
+                <li class="title__ul">Mequi para voce</li>
+                <li>App do Mequili</li>
+                <li>McDelivery</li>
+                <li>Mequi no Ifood</li>
+                <li>Peca e retire</li>
+                <li>Gift Card</li>
+                <li>Mequi Zap</li>
+                <li>Drive Thru</li>
+                <li>Use Mequi</li>
+            </ul>
+            <ul class="links">
+                <li class="title__ul">Contatos</li>
+                <li>Contato</li>
+            </ul>
+        </div>
+        <div class="footer__redsoc__downloads flex">
+            <div class="footer__redeSociais flex">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+            <div class="footer__download flex">
+                <img src="image/app_store_3x_d293084ca1.png" alt="botão de download do app na appstory" class="img__down">
+                <img src="image/disponible_google_play_3x_c977cae3bc.png" alt="botão de download do app na playstory" class="img__down">
+            </div>
+        </div>
+        <div class="footer__finaly flex">
+            <div class="termos">
+                <a href="">Privacidade</a>
+                <a href="">Termos e condições</a>
+            </div>
+            <div class="autoral flex">
+                <img src="image/kisspng-hamburger-take-out-mcdonald-s-big-mac-drive-throug-mcdonalds-5ac3bf6470a595.1201201515227779564614.png" alt="">
+                <p>©  McDonald's 2023</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
