--- a/contatos.html
+++ b/contatos.html
@@ -56,20 +56,20 @@
                             <label class="labels_form" id="f_nome" for="nome">* Nome:</label>
                         </div>
                         <div class="form-group">
-                            <input class="input__form" type="text" id="sobrenome" required>
-                            <label class="labels_form" for="sobrenome">* Sobrenome:</label>
+                            <input id="i_sobrenome" class="input__form" type="text" required>
+                            <label id="f_sobrenome" class="labels_form" for="sobrenome">* Sobrenome:</label>
                         </div>
                         <div class="form-group">
-                            <input class="input__form" type="text" id="email" required>
-                            <label class="labels_form" for="email">* E-mail:</label>
+                            <input id="i_email" class="input__form" type="text" required>
+                            <label id="f_email" class="labels_form" for="email">* E-mail:</label>
                         </div>
                         <div class="form-group">
-                            <input class="input__form" type="text" id="telefone" required>
-                            <label class="labels_form" for="telefone"> Telefone:</label>
+                            <input id="i_telefone" class="input__form" type="text" required>
+                            <label id="f_telefone"class="labels_form" for="telefone"> Telefone:</label>
                         </div>
                         <div class="form-group">
-                            <input class="input__form" type="text" id="cidade" required>
-                            <label class="labels_form" for="cidade"> Cidade:</label>
+                            <input id="i_cidade" class="input__form" type="text" required>
+                            <label id="f_cidade" class="labels_form" for="cidade"> Cidade:</label>
                         </div>
                         <div class="label-isolada"><label>* Assunto</label></div>
                         <div class="form-group">
