--- a/trab_conosco.html
+++ b/trab_conosco.html
@@ -21,7 +21,7 @@
                     <ul id="sideBar__link">
                         <li><a href="trab_conosco.html" class="sideBar__link__text">Trabalhe conosco</a></li>
                         <li><a href="contatos.html" class="sideBar__link__text">Fale conosco</a></li>
-                        <li><a href="#" class="sideBar__link__text">Méqui mais próximo</a></li>
+                        <li><a href="localização.html" class="sideBar__link__text">Méqui mais próximo</a></li>
                     </ul>
                   
                     <div id="sideBar__btn">
